src/main/java/com/example/petree/global/error/exception/AuthenticationException.java
package com.example.petree.global.error.exception;

import com.example.petree.global.error.ErrorCode;

public class AuthenticationException extends BusinessException {

    public AuthenticationException(ErrorCode errorCode) {
        super(errorCode);
    }

}
